# terra-mind

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Checklist.md  LICENSE  README.md  docker-compose.yml  eval_thresholds.yaml
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  eval-rag.yml  eval-redteam.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agent/: class_detection.py  graph.py  state.py  tools.py
backend/app/api/: admin.py  auth.py  bot.py  deps.py  me.py  middleware.py  versions.py
backend/app/core/: config.py  cors.py  lifespan.py  logging.py  prompts.py  threshold_directions.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: a8f3b2c1d4e5_initial.py  b1c2d3e4f5a6_rag_chunks_corpus_fields.py  c2d3e4f5a6b7_rls_policy_nullif.py  d3e4f5a6b7c8_tenant_preferences.py  e4f5a6b7c8d9_rerag_jobs.py
backend/app/domain/: admin.py  bot.py  preferences.py
backend/app/entrypoints/: bootstrap_operator.py
backend/app/eval/agent/: harness.py
backend/app/eval/rag/: harness.py
backend/app/eval/redteam/: harness.py
backend/app/guardrails/: __init__.py  judge.py  models.py  rules.py
backend/app/infra/: anthropic.py  auth.py  jwt_tokens.py  redaction.py  tracing.py  vault.py
backend/app/jobs/: __init__.py  queue.py  rerag.py  smoke.py
backend/app/memory/: denylist.py  short_term.py
backend/app/prompts/: agent_system.md  class_fallback.md  faq_answer.md  guardrail_judge.md  router.md
backend/app/rag/: chunker.py  corpus_build.py  embedder.py  models.py  pipeline.py
backend/app/repositories/: admin.py  audit.py  messages.py  preferences.py  rag_chunks.py  rerag.py  sessions.py  tenants.py
backend/app/services/: admin.py  agent.py  agent_stub.py  auth.py  erasure.py  faq.py  guardrails.py  memory.py  preferences.py  rerag.py  rls.py  router.py  versions.py
backend/data/eval/: agent_grounding.jsonl  eval_rag.jsonl  redteam.jsonl
backend/measurements/: agent_cost_20260612T154603Z.json  agent_cost_20260613T164240Z.json
backend/scripts/: build_corpus.py  measure_agent_cost.py  postgres-init.sh  refresh_golden_set.py  scrape_cargo.py  scrape_wiki.py  vault-init.sh
backend/scripts/_cargo/: fetcher.py  manifest.py
backend/scripts/_scrape/: api.py  discovery.py  fetcher.py  manifest.py  robots.py
backend/tests/: conftest.py  test_bootstrap_operator.py  test_eval_redteam.py  test_healthz.py  test_logging.py  test_redaction.py  test_refuse_to_boot.py
backend/tests/agent/: test_class_detection.py  test_graph.py  test_tools.py
backend/tests/api/: test_admin.py  test_auth.py  test_bot_ask.py  test_bot_guardrails.py  test_cors.py  test_erasure.py  test_preferences.py  test_rerag.py  test_roles.py  test_versions.py
backend/tests/domain/: test_state_payload.py
backend/tests/eval/rag/: test_harness.py
backend/tests/guardrails/: test_judge.py  test_rules.py
backend/tests/infra/: test_anthropic.py
backend/tests/jobs/: test_smoke.py
backend/tests/memory/: test_short_term.py
backend/tests/rag/: test_chunker.py  test_embedder.py  test_pipeline.py
backend/tests/scripts/: test_build_corpus.py  test_measure_agent_cost.py  test_refresh_golden_set.py  test_scrape_cargo.py  test_scrape_wiki.py
backend/tests/scripts/fixtures/: allpages_final.json  allpages_response.json  page_content_legacy.json  page_content_modern.json  page_info.json
backend/tests/services/: test_agent.py  test_faq.py  test_rls_context.py  test_rls_isolation.py  test_router.py
client/: VERIFICATION.md
client/TerraMind/: TerraMind.cs  TerraMind.csproj  build.txt
client/TerraMind/Commands/: BotCommand.cs
client/TerraMind/Config/: TerraMindConfig.cs
client/TerraMind/Players/: TerraMindPlayer.cs
client/TerraMind/State/: BossFlags.cs  StateDtos.cs  StateReader.cs
client/TerraMind/Transport/: AuthFlow.cs  AuthStore.cs  BackendClient.cs  Session.cs  TransportDtos.cs
deliverables/: ARCH.md  DECISIONS.md  EVALS.md  LICENSES.md  RUNBOOK.md  SECURITY.md
frontend-admin/: Dockerfile  README.md  admin_api.py  app.py  presets.py  requirements.txt
frontend-admin/.streamlit/: config.toml
frontend-user/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-user/src/: App.tsx  api.ts  auth.ts  main.tsx  styles.css  theme.ts  types.ts
frontend-user/src/components/: AuthPanel.tsx  ConfigPanel.tsx  ThemeToggle.tsx
spike/: README.md  echo_server.py
spike/client-reference/TerraMindSpike/: BotCommand.cs  TerraMindSpike.cs  build.txt
