[project]
name = "terra-mind-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "hvac>=2.3",
    "pgvector>=0.3",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["app/db/migrations/versions/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["hvac.*", "pgvector.*", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-m", "not eval and not redteam"]
markers = [
    "eval: evaluation tests — deselected by default, run in eval-rag workflow",
    "redteam: red-team tests — deselected by default, run in eval-redteam workflow",
]
