[project]
name = "terra-mind-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "httpx>=0.27",
    "hvac>=2.3",
    "langfuse>=2.0,<3.0",
    "mwparserfromhell>=0.7.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["app/db/migrations/versions/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "hvac.*", "pgvector.*", "alembic.*", "langfuse.*", "respx.*",
    "mwparserfromhell.*", "sentence_transformers.*", "torch.*",
    "transformers.*", "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-m", "not eval and not redteam"]
markers = [
    "eval: evaluation tests — deselected by default, run in eval-rag workflow",
    "redteam: red-team tests — deselected by default, run in eval-redteam workflow",
]
