[project]
name = "terra-mind-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.40",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx>=0.27",
    "hvac>=2.3",
    "langfuse>=2.0,<3.0",
    "langgraph==1.2.4",
    "mwparserfromhell>=0.7.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0",
    "redis>=8.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.1",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "testcontainers[postgres]>=4.14.2",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["app/db/migrations/versions/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "hvac.*", "pgvector.*", "alembic.*", "langfuse.*", "respx.*",
    "mwparserfromhell.*", "sentence_transformers.*", "torch.*",
    "transformers.*", "numpy.*", "testcontainers.*", "fakeredis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-m", "not eval and not redteam"]
markers = [
    "eval: evaluation tests — deselected by default, run in eval-rag workflow",
    "redteam: red-team tests — deselected by default, run in eval-redteam workflow",
]
